add question to survey

--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -1,5 +1,5 @@
 ﻿<style>
-    .ml-3{
+    .ml-3 {
         padding-left: 10px;
     }
 </style>
@@ -59,124 +59,14 @@
                             <button type="button" class="btn btn-success" id="btn-add-question">
                                 <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm câu hỏi
                             </button>
-                            <div class="accordion mt-3" id="accordionExample">
-                                <div class="card accordion-item active">
-                                    <h2 class="accordion-header" id="headingOne">
-                                        <button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#accordionOne" aria-expanded="true" aria-controls="accordionOne">
-                                            1. How are you today?
-                                        </button>
-                                    </h2>
-
-                                    <div id="accordionOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
-                                        <div class="accordion-body">
-                                            <div class="float-start">
-                                                I am fine
-                                            </div>
-                                            <div class="float-end m-2">
-                                                <button type="button" class="btn btn-icon btn-outline-secondary">
-                                                    <span class="tf-icons bx bx-edit"></span>
-                                                </button>
-                                                <button type="button" class="btn btn-icon btn-outline-danger">
-                                                    <span class="tf-icons bx bx-trash"></span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-5 mb-2 ml-3">
-                                            <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
-                                                    <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-secondary btn-edit-question">
-                                                    <span class="tf-icons bx bx-edit"></span>&nbsp; Sửa
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-danger btn-delete-question">
-                                                    <span class="tf-icons bx bx-trash"></span>&nbsp; Xóa
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>      
-                                    
-                                </div>
-                                <div class="card accordion-item">
-                                    <h2 class="accordion-header" id="headingTwo">
-                                        <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionTwo" aria-expanded="false" aria-controls="accordionTwo">
-                                            2. What are you doing?
-                                        </button>
-                                    </h2>
-                                    <div id="accordionTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample" style="">
-                                        <div class="accordion-body">
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Playing </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Learning </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Listening </label>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-5 mb-2 ml-3">
-                                            <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
-                                                    <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-secondary btn-edit-question">
-                                                    <span class="tf-icons bx bx-edit"></span>&nbsp; Sửa
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-danger btn-delete-question">
-                                                    <span class="tf-icons bx bx-trash"></span>&nbsp; Xóa
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>                                 
-                                </div>
-                                <div class="card accordion-item">
-                                    <h2 class="accordion-header" id="headingThree">
-                                        <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionThree" aria-expanded="false" aria-controls="accordionThree">
-                                            3. What is your problem?
-                                        </button>
-                                    </h2>
-                                    <div id="accordionThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample" style="">
-                                        <div class="accordion-body">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                                                <label class="form-check-label" for="defaultCheck3"> Health problem</label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                                                <label class="form-check-label" for="defaultCheck3"> Seven love </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                                                <label class="form-check-label" for="defaultCheck3"> Not enough money </label>
-                                            </div>
-                                        </div>
-                                        <div class="row mt-5 mb-2 ml-3">
-                                            <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
-                                                    <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-secondary btn-edit-question">
-                                                    <span class="tf-icons bx bx-edit"></span>&nbsp; Sửa
-                                                </button>&nbsp;
-                                                <button type="button" class="btn btn-outline-danger btn-delete-question">
-                                                    <span class="tf-icons bx bx-trash"></span>&nbsp; Xóa
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>                                 
-                                </div>
-                            </div>
+                            <div class="accordion mt-3" id="accordionExample"></div>
                             <div class="d-flex justify-content-end">
                                 <button type="submit" id="btnSubmitBasicSurvey" class="btn btn-primary col-1 mt-4">Tiếp theo</button>
                                 <h1 id="demo"></h1>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-                            
+
                         </div>
                     </div>
                 </div>
@@ -208,19 +98,19 @@
                 <div class="row g-2">
                     <div class="col mb-0">
                         <select id="defaultSelect" class="form-select">
-                            <option>Loại câu hỏi</option>
+                            <option selected disabled>Loại câu hỏi</option>
                             <option value="1">Nhập text</option>
                             <option value="2">Lựa chọn radio button</option>
                             <option value="3">Chọn nhiều checkbox</option>
                         </select>
-                    </div>                   
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Đóng
                 </button>
-                <button type="button" class="btn btn-primary">Lưu thay đổi</button>
+                <button type="button" id="btnSubmitQuestion" class="btn btn-primary">Lưu thay đổi</button>
             </div>
         </div>
     </div>
@@ -236,12 +126,12 @@
                         aria-label="Close"></button>
             </div>
             @*<div class="modal-body">
-                <div class="row">
-                    <div class="col mb-3">
-                        <label for="nameLarge" class="form-label">Chắc chắn xóa câu hỏi?</label>
+                    <div class="row">
+                        <div class="col mb-3">
+                            <label for="nameLarge" class="form-label">Chắc chắn xóa câu hỏi?</label>
+                        </div>
                     </div>
-                </div>              
-            </div>*@
+                </div>*@
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Bỏ qua
@@ -253,6 +143,7 @@
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="~/Content/Admin/add_survey.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         $('#btn-add-question').click(function () {
@@ -264,6 +155,6 @@
         $('.btn-delete-question').click(function () {
             $('#delete-question-modal').modal('show');
         })
-        
+
     })
 </script>
