Save code before change branch.

--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -2,6 +2,9 @@
     .ml-3{
         padding-left: 10px;
     }
+    .mb-4 {
+        margin-right: -42px;
+    }
 </style>
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý Survey/</span>Thêm Survey</h4>
@@ -62,28 +65,28 @@
                             <div class="accordion mt-3" id="accordionExample">
                                 <div class="card accordion-item active">
                                     <h2 class="accordion-header" id="headingOne">
-                                        <button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#accordionOne" aria-expanded="true" aria-controls="accordionOne">
+                                        <button type="button" class="accordion-button" id="question-element" data-bs-toggle="collapse" data-bs-target="#accordionOne" aria-expanded="true" aria-controls="accordionOne">
                                             1. How are you today?
                                         </button>
                                     </h2>
 
                                     <div id="accordionOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample" style="">
                                         <div class="accordion-body">
-                                            <div class="float-start">
+                                            <div class="float-start" id="answer-text">
                                                 I am fine
                                             </div>
                                             <div class="float-end m-2">
-                                                <button type="button" class="btn btn-icon btn-outline-secondary">
+                                                <button type="button" class="btn btn-icon btn-outline-secondary" id="btn-edit-answer">
                                                     <span class="tf-icons bx bx-edit"></span>
                                                 </button>
-                                                <button type="button" class="btn btn-icon btn-outline-danger">
+                                                <button type="button" class="btn btn-icon btn-outline-danger" id="btn-delete-answer">
                                                     <span class="tf-icons bx bx-trash"></span>
                                                 </button>
                                             </div>
                                         </div>
                                         <div class="row mt-5 mb-2 ml-3">
                                             <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
+                                                <button type="button" class="btn btn-outline-primary btn-add-answer">
                                                     <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
                                                 </button>&nbsp;
                                                 <button type="button" class="btn btn-outline-secondary btn-edit-question">
@@ -98,29 +101,55 @@
                                     
                                 </div>
                                 <div class="card accordion-item">
-                                    <h2 class="accordion-header" id="headingTwo">
+                                    <h2 class="accordion-header" id="headingOne">
                                         <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionTwo" aria-expanded="false" aria-controls="accordionTwo">
                                             2. What are you doing?
                                         </button>
                                     </h2>
                                     <div id="accordionTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample" style="">
                                         <div class="accordion-body">
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Playing </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Learning </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input name="default-radio-1" class="form-check-input" type="radio" value="" id="defaultRadio2" checked="">
-                                                <label class="form-check-label" for="defaultRadio2"> Listening </label>
+                                            <div>
+                                                <div class="form-check mb-3">
+                                                    <input name="default-radio-1" class="form-check-input" type="radio" value="" id="answer-radio" checked="">
+                                                    <label class="form-check-label" id="answer-element" for="defaultRadio2"> Playing </label>
+                                                    <div class="float-end mb-4">
+                                                        <button type="button" class="btn btn-icon btn-outline-secondary" id="btn-edit-answer">
+                                                            <span class="tf-icons bx bx-edit"></span>
+                                                        </button>
+                                                        <button type="button" class="btn btn-icon btn-outline-danger" id="btn-delete-answer">
+                                                            <span class="tf-icons bx bx-trash"></span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <div class="form-check mb-3">
+                                                    <input name="default-radio-1" class="form-check-input" type="radio" value="" id="answer-radio" checked="">
+                                                    <label class="form-check-label" id="answer-element" for="defaultRadio2"> Learning </label>
+                                                    <div class="float-end mb-4">
+                                                        <button type="button" class="btn btn-icon btn-outline-secondary" id="btn-edit-answer">
+                                                            <span class="tf-icons bx bx-edit"></span>
+                                                        </button>
+                                                        <button type="button" class="btn btn-icon btn-outline-danger"  id="btn-delete-answer">
+                                                            <span class="tf-icons bx bx-trash"></span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <div class="form-check mb-3">
+                                                    <input name="default-radio-1" class="form-check-input" type="radio" value="" id="answer-radio" checked="">
+                                                    <label class="form-check-label" id="answer-element" for="defaultRadio2"> Listening </label>
+                                                    <div class="float-end mt-4">
+                                                        <button type="button" class="btn btn-icon btn-outline-secondary" id="btn-edit-answer" >
+                                                            <span class="tf-icons bx bx-edit"></span>
+                                                        </button>
+                                                        <button type="button" class="btn btn-icon btn-outline-danger" id="btn-delete-answer">
+                                                            <span class="tf-icons bx bx-trash"></span>
+                                                        </button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="row mt-5 mb-2 ml-3">
                                             <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
+                                                <button type="button" class="btn btn-outline-primary btn-add-answer">
                                                     <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
                                                 </button>&nbsp;
                                                 <button type="button" class="btn btn-outline-secondary btn-edit-question">
@@ -134,7 +163,7 @@
                                     </div>                                 
                                 </div>
                                 <div class="card accordion-item">
-                                    <h2 class="accordion-header" id="headingThree">
+                                    <h2 class="accordion-header" id="headingOne">
                                         <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordionThree" aria-expanded="false" aria-controls="accordionThree">
                                             3. What is your problem?
                                         </button>
@@ -156,7 +185,7 @@
                                         </div>
                                         <div class="row mt-5 mb-2 ml-3">
                                             <div class="col">
-                                                <button type="button" class="btn btn-outline-primary">
+                                                <button type="button" class="btn btn-outline-primary btn-add-answer">
                                                     <span class="tf-icons bx bx-plus"></span>&nbsp; Thêm trả lời
                                                 </button>&nbsp;
                                                 <button type="button" class="btn btn-outline-secondary btn-edit-question">
@@ -209,9 +238,9 @@
                     <div class="col mb-0">
                         <select id="defaultSelect" class="form-select">
                             <option>Loại câu hỏi</option>
-                            <option value="1">Nhập text</option>
-                            <option value="2">Lựa chọn radio button</option>
-                            <option value="3">Chọn nhiều checkbox</option>
+                            <option id="question-text" value="1">Nhập text</option>
+                            <option id="question-radio" value="2">Lựa chọn radio button</option>
+                            <option id="question-checkbox"value="3">Chọn nhiều checkbox</option>
                         </select>
                     </div>                   
                 </div>
@@ -220,7 +249,7 @@
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Đóng
                 </button>
-                <button type="button" class="btn btn-primary">Lưu thay đổi</button>
+                <button type="button" class="btn btn-primary save-change-question">Lưu thay đổi</button>
             </div>
         </div>
     </div>
@@ -246,7 +275,61 @@
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Bỏ qua
                 </button>
-                <button type="button" class="btn btn-primary">Xác nhận xóa</button>
+                <button type="button" class="btn btn-primary confirm-remove">Xác nhận xóa</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="mt-3">
+    <!-- Modal -->
+    <div class="modal fade" id="add-answer-modal" tabindex="-1" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel1">Thêm câu trả lời</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col mb-3">
+                            <label for="nameBasic" class="form-label">Câu trả lời</label>
+                            <input type="text" id="answerDetail" class="form-control" placeholder="Nhập câu trả lời">
+                        </div>
+                    </div>
+                   
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="button" class="btn btn-primary btn-update-answer">Lưu thay đổi</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="delete-answer-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel3">Chắc chắn xóa câu trả lời?</h5>
+                <button type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            @*<div class="modal-body">
+                    <div class="row">
+                        <div class="col mb-3">
+                            <label for="nameLarge" class="form-label">Chắc chắn xóa câu hỏi?</label>
+                        </div>
+                    </div>
+                </div>*@
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                    Bỏ qua
+                </button>
+                <button type="button" class="btn btn-primary confirm-remove">Xác nhận xóa</button>
             </div>
         </div>
     </div>
@@ -260,10 +343,59 @@
         })
         $('.btn-edit-question').click(function () {
             $('#question-modal').modal('show');
+            var getQuestionElement = $('#question-element').text();
+            $('#nameLarge').val(getQuestionElement);
+        })
+        $('.save-change-question').click(function () {
+            var updateQuestion = $('#nameLarge').val();
+            $('#question-element').val(updateQuestion);
         })
         $('.btn-delete-question').click(function () {
             $('#delete-question-modal').modal('show');
         })
-        
-    })
+        $('.btn-add-answer').click(function () {
+            $('#add-answer-modal').modal('show');
+        })
+        var i = 1;
+       
+        $('#btn-edit-answer').click(function (editAnswer) {
+            alert("hello");
+            $('#add-answer-modal').modal('show');
+            editAnswer.preventDefault();
+           
+            // sua answer text
+            var getAnswerElement = $('#answer-element' + i).text();
+            $('#answerDetail').val(getAnswerElement);
+            i++;
+        })
+        $('#btn-delete-answer'+i).click(function () {
+            $('#delete-answer-modal').modal('show');
+        })
+        // them cau tra loi
+        var wrapper1 = $("#myTabContent");
+        var addButtonQuestion = $(".save-change-question");
+        $(addButtonQuestion).click(function (addQuestion) {
+            addQuestion.preventDefault();
+            var titleQuestion = $("#nameLarge").val();
+            wrapper1.append('<div><p>' + titleQuestion + '</p></div>');
+
+        });
+        //$("#question_modal").modal('hide');
+        //titleQuestion = $("#nameLarge").val("");
+
+        //// Remove question
+        //var i = 0;
+        //$(".confirm-remove").click(function (removeQuestion) {
+        //    removeQuestion.preventDefault();
+        //    var getRemoveQuestion = $("#headingOne" + i).val();
+        //    wrapper1.remove()
+        //})
+
+        // sua cau tra loi
+        $('.btn-update-answer').click(function () {
+            var getAnswerChanged = $('#answerDetail').val();
+            $('#answer-text').text(getAnswerChanged);
+        })
+    });
+
 </script>
