Change to show diff.

--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -320,7 +320,7 @@
             </div>
             @*<div class="modal-body">
                     <div class="row">
-                        <div class="col mb-3">
+                        <div class="col mb-3">__
                             <label for="nameLarge" class="form-label">Chắc chắn xóa câu hỏi?</label>
                         </div>
                     </div>
