add question to survey

--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -2,6 +2,7 @@
     .ml-3 {
         padding-left: 10px;
     }
+
     .mb-4 {
         margin-right: -42px;
     }
@@ -142,6 +143,35 @@
                     Bỏ qua
                 </button>
                 <button type="button" class="btn btn-primary confirm-remove">Xác nhận xóa</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- add question Modal -->
+<div class="modal fade" id="add-answer-modal" tabindex="-1" aria-hidden="true">
+    <input type="hidden" id="current-question-index" name="current-question-index" value="0" />
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel1">Thêm câu trả lời</h5>
+                <button type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col mb-3">
+                        <label for="txt-answer" class="form-label">Câu trả lời</label>
+                        <input type="text" id="txt-answer" class="form-control" placeholder="Please enter answer" />
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                    Close
+                </button>
+                <button type="button" class="btn btn-primary add-answer">Lưu thay đổi</button>
             </div>
         </div>
     </div>
