--- a/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/Create.cshtml
@@ -67,9 +67,7 @@
                                              aria-labelledby="headingOne"
                                              data-bs-parent="#accordionExample">
                                             <div class="accordion-body-text">
-                                                <div class="row" id="answer-text1">
-                                                    @*<div></div>*@
-                                                </div>
+                                                <div class="row" id="answer-text1"> </div>
                                                 <div class="col ms-lg-4 mb-5">
                                                     <input type="text" id="form-add-answer" class="col-md-10 p-2" />
                                                     <button type="button" class="btn btn-primary " id="btnAddAnswerText">Add answer</button>
@@ -255,7 +253,7 @@
                                     <div class="header-text httac htvam">
                                         <h1 id="header_25" class="form-header" data-component="header">
                                             <div class="editor-container editorHasText" style="display: inline-block;">
-                                                <div class="inlineEditor" placeholder="Type a header" format="text" contenteditable="true" data-gramm="false" style="padding: 10px; justify-content: center;">Employee Satisfactiony</div>
+                                                <div class="inlineEditor" placeholder="Type a header" format="text" contenteditable="true" data-gramm="false" style="padding: 20px; text-align: center; justify-content: center;">Employee Satisfactiony</div>
                                             </div>
                                         </h1>
                                     </div>
