--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -104,12 +104,12 @@
             </a>
             <ul class="menu-sub">
                 <li class="menu-item">
-                    <a href="pages-account-settings-account.html" class="menu-link">
+                    <a href="Admin/Account/Create" class="menu-link">
                         <div data-i18n="Account">Thêm mới tài khoản</div>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a href="pages-account-settings-notifications.html" class="menu-link">
+                    <a href="Admin/Account" class="menu-link">
                         <div data-i18n="Notifications">Danh sách tài khoản</div>
                     </a>
                 </li>
@@ -137,7 +137,19 @@
             <a href="javascript:void(0);" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
                 <div data-i18n="Account Settings">Báo cáo thống kê</div>
-            </a>            
+            </a>
+        </li>
+        <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
+                <div data-i18n="Account Settings">Đăng nhập</div>
+            </a>
+        </li>
+        <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
+                <div data-i18n="Account Settings">Đăng ký</div>
+            </a>
         </li>
     </ul>
 </aside>
